src-tauri/tests/snapshots/parsers_snapshot__opencode_list.snap
---
source: tests/parsers_snapshot.rs
expression: conversations
---
[
  {
    "id": "oc-sess-001",
    "agent_type": "open_code",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "OpenCode demo session",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "claude-sonnet-4-6",
    "git_branch": null
  }
]
